test/fails/bad_functions/arguments4.lgl
int f(int x, bool y) {
    return x + y;
}

void main() {
    print f(1, true);
    return;
}